Added documentation, revisited interfaces, fixed warnings